overflow bug fix

--- a/aircall-app/src/App.css
+++ b/aircall-app/src/App.css
@@ -134,6 +134,5 @@ a {
 
 .overflow {
   overflow: auto;
-  padding: 0 !important;
-  margin: 0 !important;
+  margin: 0 2.5em 0 2.5em;
 }
